Added new officers

--- a/index.html
+++ b/index.html
@@ -93,6 +93,53 @@
         </div> -->
     </header>
 
+    <!--
+    <section id="upcoming-events" class="wow fadeInUp">
+      <div class="container">
+        <h3 class="section-title">Upcoming Events</h3>
+        <div class="card-deck">
+
+            <div class="card text-center">
+              <div class="card-header bg-custom-1">
+                <h5 class="card-date">September 3rd</h5>
+                <h5 class="card-date">7 PM | 114 LIT</h5>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Code Collab</h5>
+                <p>Test sample card thing</p>
+              </div>
+            </div>
+
+          <div class="card text-center">
+            <div class="card-header">
+              <h5 class="card-date">September 8th</h5>
+              <h5 class="card-date"><a href="https://ufl.zoom.us/j/97536976650">7 PM | Zoom</a></h5>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">General Body Meeting #2</h5>
+              <p>Hello everyone! We are excited to invite you all to our second GBM on Thursday October 8th!
+                Come out to meet our new officers and hear about progress on Clubfinity! We will be going over how we track sprint progress and delegate tasks for the app. This is a great opportunity to gain insight into Agile planning and what development is like in an industry setting!
+                We are excited to see everyone and announce our upcoming events for the semester!</p>
+              <p>Zoom Link: <a href="https://ufl.zoom.us/j/97536976650">https://ufl.zoom.us/j/97536976650</a> </p>
+              <p>Facebook Link: <a href="https://www.facebook.com/events/3684185941606080">https://www.facebook.com/events/3684185941606080</a></p>
+            </div>
+          </div>
+
+          <div class="card text-center">
+            <div class="card-header bg-custom-2">
+              <h5 class="card-date">September 17th</h5>
+              <h5 class="card-date">6:30 PM | 241 CSE</h5>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Clubfinity</h5>
+              <p>Test sample card thing</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    -->
 
     <section id="about-us" class="wow fadeInUp">
       <h3 class="section-title">About Us</h3>
@@ -170,7 +217,7 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/ankit.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/AnkitVishnubhotla.jpg" alt="">
             <h5>Ankit Vishnubhotla</h5>
             <p class="font-weight-light mb-0">President</p>
             <div id="social-links">
@@ -181,19 +228,18 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/zeeshan.jpg" alt="">
-            <h5>Zeeshan Habbib</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/DavidSadowsky.jpg" alt="">
+            <h5>David Sadowsky</h5>
             <p class="font-weight-light mb-0">Vice President</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/zeeshan-habib/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/zhabib3"><i class="fab fa-github"></i></a>
-              <a href="https://zhabib3.github.io/"><i class="fas fa-globe"></i></a>
-            </div>
+              <a href="https://www.linkedin.com/in/david-sadowsky-221309146/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/DavidSadowsky"><i class="fab fa-github"></i></a>
+              </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/pablo.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/PabloEstrada.jpg" alt="">
             <h5>Pablo Estrada</h5>
             <p class="font-weight-light mb-0">Head of Development</p>
             <div id="social-links">
@@ -209,34 +255,34 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/garrett.jpg" alt="">
-            <h5>Garrett Kost</h5>
-            <p class="font-weight-light mb-0">Head of Operation</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/NataschaKempfe.jpg" alt="">
+            <h5>Natascha Kempfe</h5>
+            <p class="font-weight-light mb-0">Head of Operations</p>
             <div id="social-links">
-              <a href="http://linkedin.com/in/garrettkost"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/garrettkost"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/natascha-kempfe/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/nlkempfe"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/lina.jpg" alt="">
-            <h5>Lina Soufny</h5>
-            <p class="font-weight-light mb-0">Head of Outreach</p>
-            <div id="social-links">
-              <a href="http://linkedin.com/in/lina-s-54abb5122"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/lsoufny"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/david.png" alt="">
-            <h5>David Sadowsky</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/LucasLiseth.jpeg" alt="">
+            <h5>Lucas Liseth</h5>
             <p class="font-weight-light mb-0">Head of Product</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/david-sadowsky-221309146/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/DavidSadowsky"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/lucas-liseth/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/soberpeach"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/EmilyKelsey.jpg" alt="">
+            <h5>Emily Kelsey</h5>
+            <p class="font-weight-light mb-0">Head of Outreach</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/emily-kelsey/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/emkelsey32"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -246,7 +292,7 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/kevin.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/KevinThomas.jpg" alt="">
             <h5>Kevin Thomas</h5>
             <p class="font-weight-light mb-0">Webmaster</p>
             <div id="social-links">
@@ -257,7 +303,7 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/evan.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/EvanRupert.jpg" alt="">
             <h5>Evan Rupert</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
@@ -268,12 +314,13 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/natascha.jpg" alt="">
-            <h5>Natascha Kempfe</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/LiaPassaglia.JPG" alt="">
+            <h5>Lia Passaglia</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/natascha-kempfe/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/nlkempfe"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/maria-lia-passaglia//"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/liapassaglia"><i class="fab fa-github"></i></a>
+              <a href="https://liapassaglia.github.io"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -283,35 +330,73 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/sayed.jpg" alt="">
-            <h5>Sayed Afif</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/sayedafif/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/sayedafif"><i class="fab fa-github"></i></a>
-              <a href="https://sayedafif.com/"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/dylan.png" alt="">
-            <h5>Dylan Hawley</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/dylanhawley/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/dylanhawley"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/joel.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/JoelRios.jpg" alt="">
             <h5>Joel Rios</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
+            <p class="font-weight-light mb-0">Technical Officer | UX Lead</p>
             <div id="social-links">
               <a href="https://www.linkedin.com/in/imjoelrios/"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/imjoelrios"><i class="fab fa-github"></i></a>
+              <a href="https://joelrios.com/"><i class="fas fa-globe"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/PranayRaman.png" alt="">
+            <h5>Pranay Raman</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/pranay-raman/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/PranayRaman"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/MinatoSkyMyers.jpg" alt="">
+            <h5>Minato Sky Myers</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/minatoskymyers/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/skyfall17"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row wow fadeInUp">
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/MichelChalfoun.jpg" alt="">
+            <h5>Michel Chalfoun</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/michelelchalfoun/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/michelchalfoun"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/SriramSelvakumar.jpeg" alt="">
+            <h5>Sriram Selvakumar</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/sriram-selvakumar-09a614123/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/sriramselvakumar"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/BenjiLabonte.jpg" alt="">
+            <h5>Benji Labonte</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/benji-labonte-59899316b/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/superbenji711"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/superbenji711/Benji-app"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -324,17 +409,16 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/lia.JPG" alt="">
-            <h5>Lia Passaglia</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/JacobBleser.jpg" alt="">
+            <h5>Jacob Bleser</h5>
+            <p class="font-weight-light mb-0">UX Lead</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/maria-lia-passaglia//"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/liapassaglia"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/jacobbleser/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/megaboy101"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
       </div>
-
 
     </div>
   </section>
