Updated slack link

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <ul class="socialIcons text-center">
            <li class="facebook"><a href="https://www.facebook.com/groups/ufsec/"><i class="fa fa-fw fa-facebook"></i>Facebook</a></li>
            <li class="instagram"><a href="https://www.instagram.com/ufsec/"><i class="fa fa-fw fa-instagram"></i>Instagram</a></li>
-           <li class="slack"><a href="https://join.slack.com/t/ufsec/shared_invite/enQtNDM0NTc1Mzg2OTE3LTNhOTNiZTc4YzJlNzRmYzBlYTliZGQyZDRmZjdiODc5ZjA1MjU0OTg2MGY0MTc5YmU1OWU0YzA3OGI4N2UwNWI"><i class="fab fa-fw fa-slack-hash"></i>Slack</a></li>
+           <li class="slack"><a href="https://join.slack.com/t/ufsec/shared_invite/zt-5jn2yqlh-w5fXg_ouyhN41RMWycXasA"><i class="fab fa-fw fa-slack-hash"></i>Slack</a></li>
         </ul>
         <div class="info action-links slide-in text-center">
           <a class="btn btn-primary btn-pill align-self-center join-btn" href="#connect">Join Now</a>
@@ -456,9 +456,9 @@
                <div class="connect-header">
                  <img src="img/icons/slack-logo.png"/>
                  <p class="price-value">Join us on Slack</p>
-                 <p>Slack is the best way to stay in touch with the club. Join our chanel now to receive updats on everything that is happening!</p>
+                 <p>Slack is the best way to stay in touch with the club. Join our chanel now to receive updates on everything that is happening!</p>
                </div>
-              <a href="https://join.slack.com/t/ufsec/shared_invite/enQtNDM0NTc1Mzg2OTE3LTNhOTNiZTc4YzJlNzRmYzBlYTliZGQyZDRmZjdiODc5ZjA1MjU0OTg2MGY0MTc5YmU1OWU0YzA3OGI4N2UwNWI"><button type="button" class="btn btn-outline-primary">Join</button></a>
+              <a href="https://join.slack.com/t/ufsec/shared_invite/zt-5jn2yqlh-w5fXg_ouyhN41RMWycXasA"><button type="button" class="btn btn-outline-primary">Join</button></a>
            </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
