Added new officers

--- a/index.html
+++ b/index.html
@@ -217,24 +217,24 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/AnkitVishnubhotla.jpg" alt="">
-            <h5>Ankit Vishnubhotla</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/DavidSadowsky.jpg" alt="">
+            <h5>David Sadowsky</h5>
             <p class="font-weight-light mb-0">President</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/ankit-vishnu/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/ankitvishnu23"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/david-sadowsky-221309146/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/DavidSadowsky"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/DavidSadowsky.jpg" alt="">
-            <h5>David Sadowsky</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/LucasLiseth.jpeg" alt="">
+            <h5>Lucas Liseth</h5>
             <p class="font-weight-light mb-0">Vice President</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/david-sadowsky-221309146/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/DavidSadowsky"><i class="fab fa-github"></i></a>
-              </div>
+              <a href="https://www.linkedin.com/in/lucas-liseth/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/soberpeach"><i class="fab fa-github"></i></a>
+            </div>
           </div>
         </div>
         <div class="col-lg-4">
@@ -266,12 +266,12 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/LucasLiseth.jpeg" alt="">
-            <h5>Lucas Liseth</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/NormanBukingolts.JPG" alt="">
+            <h5>Norman Bukingolts</h5>
             <p class="font-weight-light mb-0">Head of Product</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/lucas-liseth/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/soberpeach"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/normanb17/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/Normanb17"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -330,13 +330,12 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/JoelRios.jpg" alt="">
-            <h5>Joel Rios</h5>
-            <p class="font-weight-light mb-0">Technical Officer | UX Lead</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/MasenBeliveau.jpg" alt="">
+            <h5>Masen Beliveau</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/imjoelrios/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/imjoelrios"><i class="fab fa-github"></i></a>
-              <a href="https://joelrios.com/"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/masen-beliveau/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/masenrb"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -353,12 +352,12 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/MinatoSkyMyers.jpg" alt="">
-            <h5>Minato Sky Myers</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/TrevorRichardson.jpg" alt="">
+            <h5>Trevor Richardson</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/minatoskymyers/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/skyfall17"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/trevorarichardson"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/TrevorRichardson0480"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -379,12 +378,12 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/SriramSelvakumar.jpeg" alt="">
-            <h5>Sriram Selvakumar</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/EricNavar.jpg" alt="">
+            <h5>Eric Navar</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/sriram-selvakumar-09a614123/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/sriramselvakumar"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/ericnavar/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/EricNavar"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -405,16 +404,54 @@
 
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/SriramSelvakumar.jpeg" alt="">
+            <h5>Sriram Selvakumar</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/sriram-selvakumar-09a614123/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/sriramselvakumar"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+      <div class="col-lg-4">
+        <div class="officer-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="img/officers/JoelRios.jpg" alt="">
+          <h5>Joel Rios</h5>
+          <p class="font-weight-light mb-0">Technical Officer | UX Lead</p>
+          <div id="social-links">
+            <a href="https://www.linkedin.com/in/imjoelrios/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/imjoelrios"><i class="fab fa-github"></i></a>
+            <a href="https://joelrios.com/"><i class="fas fa-globe"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="officer-item mx-auto mb-5 mb-lg-0">
+          <img class="img-fluid rounded-circle mb-3" src="img/officers/JacobBleser.jpg" alt="">
+          <h5>Jacob Bleser</h5>
+          <p class="font-weight-light mb-0">UX Lead</p>
+          <div id="social-links">
+            <a href="https://www.linkedin.com/in/jacobbleser/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/megaboy101"><i class="fab fa-github"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <div class="row wow fadeInUp">
+        <div class="col-lg-4">
           <!-- Spacer -->
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/JacobBleser.jpg" alt="">
-            <h5>Jacob Bleser</h5>
-            <p class="font-weight-light mb-0">UX Lead</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/PhillipVanderlaat.jpeg" alt="">
+            <h5>Phillip Vanderlaat</h5>
+            <p class="font-weight-light mb-0">UX Designer</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/jacobbleser/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/megaboy101"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/pvanderlaat/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/pvanderlaat"><i class="fab fa-github"></i></a>
+              <a href="http://pvanderlaat.com/"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
