Redirect to Notion

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="refresh" content="0; URL=https://ufsec.notion.site/ufsec/UF-Software-Engineering-Club-8e7ec7c7088845129e35f0171f1a06fe" />
 
     <title>UF SEC Home</title>
 
